[package]
name = "xoxno-protocol"
version = "1.0.0"
authors = ["Mihai Daniel <mihai@xoxno.com>"]
edition = "2021"
publish = false

[lib]
path = "src/init.rs"

[dependencies.elrond-wasm]
version = "0.38.0"
# features = ["promises"]

[dependencies.elrond-sc-wegld-swap]
version = "0.38.0"

[dependencies.elrond-wasm-modules]
version = "0.38.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.38.0"

[dependencies]
pair = { git = "https://github.com/ElrondNetwork/sc-dex-rs", branch = "feat/dex_v2" }
