[package]
name = "xoxno-protocol"
version = "1.0.0"
authors = ["Mihai Daniel <mihai@xoxno.com>"]
edition = "2021"
publish = false

[lib]
path = "src/init.rs"
[dependencies.multiversx-sc]
version = "0.42.0"

[dependencies.multiversx-sc-modules]
version = "0.42.0"

# [dependencies.pair]
# git = "https://github.com/multiversx/mx-exchange-sc"
# branch = "main"

[dependencies.multiversx-wegld-swap-sc]
version = "0.42.0"
[dev-dependencies.multiversx-sc-scenario]
version = "0.42.0"
