[package]
name = "xoxno-protocol-meta"
version = "1.0.0"
authors = ["Mihai Daniel <mihai@xoxno.com>"]
edition = "2021"
publish = false

[dependencies.xoxno-protocol]
path = ".."

[dependencies.elrond-wasm]
version = "0.38.0"
# features = ["promises"]

[dependencies.elrond-wasm-debug]
version = "0.38.0"
