[package]
name = "xoxno-protocol-wasm"
version = "1.0.0"
authors = ["Mihai Daniel <mihai@xoxno.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
[dependencies.xoxno-protocol]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.41.0"

[workspace]
members = ["."]
